--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><a href="jogodupla.html">xadrez</a></li>
+            <li><a href="pegapega.html">pega pega</a></li>
         </ul>
     </nav>
     <h1>Jogos</h1>
